# wasm-game-of-life

./: .gitignore  1.bootstrap.js  1.bootstrap.js.map  Cargo.toml  LICENSE_MIT  README.md  bootstrap.js  bootstrap.js.map  index.html
.github/workflow/: deploy-to-pages.yml
.github/workflows/: deploy-to-pages.yml
src/: lib.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js
www/src/: index.html  index.js
